styles/globals.css
/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Puritan:ital,wght@0,400;0,700;1,400;1,700&family=Sarala:wght@400;700&display=swap'); */
@tailwind base;
@tailwind components;
@tailwind utilities;

*, *:after, *:before  {
outline: none;
-webkit-box-sizing: border-box;
-moz-box-sizing: border-box;
box-sizing: border-box;
padding:0;
margin:0;
-ms-overflow-style: none; /* IE and Edge */
scrollbar-width: none; /* Firefox */
}

::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera*/
}

:root {
  /* ColorPalette Dark */
  --dm-main-bg-color: #020b12;
  --dm-secondary-color:#b5a887;
  --dm-secondary-color-alt:#B3A394;
  --dm-secondary-color-alt-2:hsl(44, 16%, 42%);
  --dm-third-color: #275e74;
  --dm-glow-color: hsl(194, 48%, 12%);
  --dm-alt-color-1: #C0DDEF;
  --dm-alt-color-2:#429EA6;
  --dm-alt-color-3:#2E86AB;
  --dm-alt-color-4:#70D6FF;
  --dm-alt-color-5:#EA526F;
  --dm-alt-color-6:#9893DA;
  --dm-alt-color-7:#C7B8EA;
  --dm-alt-color-8:#6F5E5C;
  --dm-alt-color-9:#7B5E7B;

/* ColorPalette Light */
  --lm-main-bg-color: #AEB3B5;
  --lm-secondary-color: #212121;
  --lm-third-color:#DBFE87;
  --lm-third-color-alt1:#AFFC41;
  --lm-third-color-alt2:#61FF7E;
  --lm-glow-color: #E7E7E8;

}

body {
  /* height: 100%; */
  width: 100dvw;
  overflow-x: hidden;
  transition: background 0.5s, color 0.5s;
  background: var(--bkg-color);
  color: var(--text-color);
  font-family: var(--font-sarala);
}


/* Default colors */
body {
  --bkg-color: var(--lm-main-bg-color);
  --text-color: var(--lm-secondary-color);
}
/* Dark theme colors */
body.dark-theme {
  --bkg-color: var(--dm-main-bg-color);
  --text-color: var(--dm-secondary-color);
}

/* Styles for users who prefer dark mode at the OS level */
@media (prefers-color-scheme: dark) {
  /* defaults to dark theme */
  body { 
    --bkg-color: var(--dm-main-bg-color);
    --text-color: var(--dm-secondary-color);
  }
  /* Override dark mode with light mode styles if the user decides to swap */
  body.light-theme {
    --bkg-color: var(--lm-main-bg-color);
    --text-color: var(--lm-secondary-color);
  }
}

.btn-dark {
color: var( --dm-third-color);
}

.btn-dark:hover{
color: var(--dm-secondary-color);
border-color: var(--dm-third-color);
background-color: var(--dm-third-color);
}

.btn-light {
color: var(--lm-third-color);
}

.btn-light:hover {
  color: var(--lm-main-bg-color);
  border-color: var(--lm-third-color);
  background-color: var(--lm-third-color);;
}


.skill::after {
  content: attr(data-content);
  opacity:0; 
  transition: 0.3s;
  position: relative;
  margin-top: 4px;
}

.skill:hover::after {
  content: attr(data-content);
  color: currentColor;
  opacity: 1;
}

.dot-section::before {
  content: attr(dot-description);
  color:transparent;
  opacity:0; 
  position: relative;
  right: -25px;
  bottom: 3px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  transition: ease-out 1s;
  transition-delay: 1s;
}

.dot-section:hover::before {
  color: currentColor;
  opacity:1; 
  position: relative;
  right: 25px;
  bottom: 3px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.spinner {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}


/* ANIMATIONS */

/* MARQUEE ANIMATION */

.marquee__content{
  --gap: 2rem;
  gap: var(--gap); 
}

.marquee__rtl {
  animation: move-sideways-left 80000ms linear infinite;
}

.marquee__ltr {
  animation: move-sideways-right 40000ms linear infinite;
}

.marquee__ltr___slow {
  animation: move-sideways-right 50000ms linear infinite;
}

@keyframes move-sideways-left {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(calc(-100% - var(--gap)));
  }
}

@keyframes move-sideways-right {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(calc(0% + var(--gap)));
  }
}

/*Glow Fade-In*/

@keyframes glow-on-scroll {
	0% {
		transform: scale(0);
	}
	100% {
		transform: scale(1);
	}
}

/* @media (prefers-reduced-motion: no-preference) { */
  .glow-animation {
    animation-name: glow-on-scroll;
    animation-delay: 8s;
    animation-duration: 2s;
    animation-fill-mode: both;

  }

/*Drawing Fade-Out*/

@keyframes drawing-fade-out {
  0% {
    opacity: 100%;
  }
  50%{
    opacity: 100%;
  }
  100%{
    opacity: 0%;
  }
}

.drawing-animation {
  animation-name: drawing-fade-out;
  animation-duration: 11s;
  animation-fill-mode: both;
  }

/*Portrait Fade-In*/

@keyframes portrait-fade-in {
  0% {
    opacity: 0%;
  }
  50%{
    opacity: 0%;
  }
  100%{
    opacity: 100%;
  }
}  

.portrait-animation {
    animation-name: portrait-fade-in;
    animation-delay: 5.5s;
    animation-duration: 3s;
    animation-fill-mode: both;
  }
/* } */

/*Link-Buttons Fade-Out*/

@keyframes fade-out {
  0% {
    opacity: 100%;
  }
  
  100%{
    opacity: 0%;
  }
}  

.linkButton-fade-out-animation {
    animation-name: fade-out;
    animation-delay: 7s;
    animation-duration: 3s;
    animation-fill-mode: both;
  }

.fade-out {
    animation-name: fade-out;
    animation-duration: 2s;
    animation-fill-mode: both;
  }

  /*Link-Buttons Fade-In*/

@keyframes fade-in {
  0% {
    opacity: 0%;
  }
  
  100%{
    opacity: 100%;
  }
} 


.linkButton-fade-in-animation {
    animation-name: fade-in;
    animation-delay: 8.5s;
    animation-duration: 4s;
    animation-fill-mode: both;
  }

.fade-in {
    animation-name: fade-in;
    animation-duration: 0.5s;
    animation-fill-mode: both;
  }



  @keyframes glow-fade-in {
	0% {
		transform: scale(0);
	}
	100% {
		transform: scale(1);
	}
}
  
.glow-fade-in {
    animation-name: glow-fade-in;
    animation-delay: 1s;
    animation-duration: 2s;
    animation-fill-mode: both;

  }

  .typeEffect::after {
    content: '|';
    animation: blink 1s infinite;
  }

  @keyframes blink {
    0%, 100% {
      opacity: 1;
    }
    50% {
      opacity: 0;
    }
  }

  #NameAnimation svg [id^="Animation-Path"] {
    animation: line-anim 10s linear forwards;
  }

  @keyframes line-anim {
    to {
      stroke-dashoffset: 0;
    }
  }

